In-progress modularity