@@ -1,36 +1,29 @@
 plugins {
-//    id "net.saliman.cobertura" version "2.5.4"
-    id "com.github.johnrengelman.shadow" version "5.1.0"
+    id 'com.github.johnrengelman.shadow' version "5.2.0"
+    id 'java-library'
 }
 
-//apply plugin: "net.saliman.cobertura"
+apply plugin: 'java-library'
 apply plugin: "com.github.johnrengelman.shadow"
 
 group 'com.hiddenswitch'
-version '0.8.0'
+version '0.9.0'
 
-ext.vendor = "Parallel Universe Software Co."
-ext.quasarJar = "${rootProject.projectDir}/quasar-core/build/libs/quasar-core-${version}.jar"
-ext.java8 = JavaVersion.current() == JavaVersion.VERSION_1_8
-ext.guavaVer = '26.0-jre'
-ext.asmVer = project.ext.java8 ? '5.2' : '7.0'
-ext.kotlinVer = '1.3.0'
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.current()
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-        disableAutoTargetJvm()
-    }
-}
+def vendor = "Parallel Universe Software Co."
+def quasarJar = "${rootProject.projectDir}/quasar-core/build/libs/quasar-core-${version}.jar"
+def guavaVer = '26.0-jre'
+def asmVer = '7.0'
+def moduleName = 'co.paralleluniverse.quasar.core'
 
 repositories {
     mavenLocal()
-    mavenCentral()
+    jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/releases" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    jcenter()
 }
+
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations.all {
     resolutionStrategy {
@@ -42,14 +35,14 @@ configurations {
     compileOnly
     provided
     timewarp
-    // markdownDoclet
-    shadowedJar.extendsFrom(runtime)
+    shadowedJar.extendsFrom runtime
+    archives.extendsFrom runtime
 }
 
 sourceSets {
     main {
         java {
-            srcDir project.ext.java8 ? 'src/jdk8/java' : 'src/jdk11/java'
+            srcDir 'src/main/java'
         }
 
         compileClasspath += configurations.compileOnly + configurations.provided
@@ -86,21 +79,15 @@ sourceSets {
 }
 
 dependencies {
-    if (project.ext.java8) {
-        compile files(fileTree(dir: 'baselib', includes: ['*.jar']))
-        compile("io.dropwizard.metrics:metrics-core:3.2.3") {
-            exclude group: 'org.slf4j', module: '*'
-        }
-    } else {
-        compile("io.dropwizard.metrics:metrics-core:4.1.0-rc2") {
-            exclude group: 'org.slf4j', module: '*'
-        }
-        compile "io.dropwizard.metrics:metrics-jmx:4.1.0-rc2"
+    compile("io.dropwizard.metrics:metrics-core:4.1.0-rc2") {
+        exclude group: 'org.slf4j', module: '*'
     }
+
+    compile "io.dropwizard.metrics:metrics-jmx:4.1.0-rc2"
 
     provided "org.apache.ant:ant:1.10.5"
     compile 'com.google.errorprone:error_prone_annotations:2.3.2'
-    compile("com.google.guava:guava:$guavaVer") {
+    compile("com.google.guava:guava:${guavaVer}") {
         exclude group: 'com.google.errorprone', module: '*'
         exclude group: 'org.checkerframework', module: 'checker-qual'
     }
@@ -150,16 +137,12 @@ dependencies {
 
     // this happens after we've filtered the dependency on ASM from core's module-info
     compileTestJava {
-        if (!project.ext.java8) {
-            options.compilerArgs += ["--add-modules", "org.objectweb.asm", "--add-reads", "co.paralleluniverse.quasar.core=org.objectweb.asm"]
-        }
+        options.compilerArgs += ["--add-modules", "org.objectweb.asm", "--add-reads", "co.paralleluniverse.quasar.core=org.objectweb.asm"]
     }
 
     provided('junit:junit:4.12') {
         exclude group: 'org.hamcrest', module: '*'
     }
-    // annotationProcessor 'com.google.auto.service:auto-service:1.0-rc1' // same as metainf-services
-    // markdownDoclet "ch.raffael.pegdown-doclet:pegdown-doclet:1.1.1"
 }
 
 compileJava.dependsOn processResources
@@ -197,33 +180,25 @@ compileJava {
 }
 
 test {
-    if (!project.ext.java8) {
-        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-    }
-
-    dependsOn = [jar, compileClassloadertestJava]
     useJUnit()
+    moduleOptions {
+        runOnClasspath = true
+    }
 
     systemProperty 'co.paralleluniverse.monitoring.flightRecorderLevel', '5'
     systemProperty 'co.paralleluniverse.globalFlightRecorder', 'true'
     systemProperty 'co.paralleluniverse.flightRecorderDumpFile', 'quasar.log'
     systemProperty 'co.paralleluniverse.monitoring.flightRecorderSize', '200000'
 
-    jvmArgs "-javaagent:${project.ext.quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
-
-    if (project.name != 'quasar-kotlin') { // TODO investigate why kotlin-plugin 1.1.2+ doesn't like it
-        jvmArgs "-Xbootclasspath/a:${configurations.timewarp.singleFile}"
-        if (System.getenv("TRAVIS") == 'true') {
-            jvmArgs "-javaagent:${configurations.timewarp.singleFile}=3" // slow clock down x3
-        }
+    jvmArgs "-javaagent:${quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
+    jvmArgs "-Xbootclasspath/a:${configurations.timewarp.singleFile}"
+    if (System.getenv("TRAVIS") == 'true') {
+        jvmArgs "-javaagent:${configurations.timewarp.singleFile}=3" // slow clock down x3
     }
-
     jvmArgs "-Xmx1024m"
-
     beforeTest { desc ->
         logger.quiet("Running test: " + desc)
     }
-
     afterTest { desc, result ->
         if (result.resultType == TestResult.ResultType.FAILURE) {
             logger.quiet("Failed test ${desc.name} [${desc.className}] with exception: ${result.exception}")
@@ -232,7 +207,6 @@ test {
             }
         }
     }
-
     doLast() {
         println "file://" + getReports().getHtml().getDestination() + "/index.html"
     }
@@ -254,7 +228,7 @@ test {
 
         systemProperty "log4j.configurationFile", "${rootProject.projectDir}/log4j.xml"
         systemProperty "Log4jContextSelector", "org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
-        jvmArgs "-javaagent:${project.ext.quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
+        jvmArgs "-javaagent:${quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
     }
 }
 
@@ -269,6 +243,7 @@ jar {
                 "Can-Retransform-Classes": "true",
                 "Can-Redefine-Classes": "true",
                 "Built-By": System.getProperty("user.name"),
+                "Automatic-Module-Name": moduleName,
         )
     }
 }
@@ -288,15 +263,7 @@ configure(javadoc) {
 }
 
 defaultTasks 'build'
-/*
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}*/
+
 
 task artifacts {
     group = "Help"
@@ -311,19 +278,6 @@ task artifacts {
     }
 }
 
-/*
- * see:
- *   https://docs.gradle.org/current/userguide/java_plugin.html
- *   http://examples.javacodegeeks.com/core-java/gradle/gradle-sourcesets-example/
- *   http://stackoverflow.com/questions/15870662/gradle-create-a-new-jar-from-each-sourceset
- *   http://stackoverflow.com/questions/18190614/compiling-a-project-with-different-java-source-compatibility
- *   https://softnoise.wordpress.com/2014/09/07/gradle-sub-project-test-dependencies-in-multi-project-builds/
- */
-
-apply plugin: 'com.github.johnrengelman.shadow'
-
-ext.moduleName = 'co.paralleluniverse.quasar.core'
-
 // remove default artifact
 configurations.runtime.artifacts.with { archives ->
     archives.each {
@@ -332,11 +286,6 @@ configurations.runtime.artifacts.with { archives ->
 }
 
 //[jar]*.enabled = false
-
-
-configurations {
-    archives.extendsFrom runtime
-}
 
 def scanAndInstrument(SourceSet sset, configs) {
     def cp = '' + sset.output.classesDirs.asPath + ':' + sset.output.resourcesDir + ':' + configs*.asPath.join(':')
@@ -357,4 +306,11 @@ def scanAndInstrument(SourceSet sset, configs) {
             exclude(name: 'co/paralleluniverse/fibers/instrument/*.class')
         }
     }
+
+    /*
+    // Filter out the 'requires org.objectweb.asm' from quasar-core's module-info, as it will be shadowed into the jar
+    ant.taskdef(name: 'filterModules', classname: 'co.paralleluniverse.fibers.instrument.ModuleFilterTask', classpath: cp)
+    ant.filterModules(module: 'org.objectweb.asm') {
+        fileset(dir: sset.output.classesDir)
+    }*/
 }
